<?xml version="1.0"?>
<package format="2">
    <name>yolov5</name>
    <version>1.17.1</version>
    <description>

        yolo v5.

    </description>
    <author>Brian Gerkey, Tony Pratkanis</author>
    <author>contradict@gmail.com</author>
    <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
    <maintainer email="mfergs7@gmail.com">Michael Ferguson</maintainer>
    <maintainer email="ahoy@fetchrobotics.com">Aaron Hoy</maintainer>
    <url>http://wiki.ros.org/map_server</url>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>nav_msgs</depend>
    <depend>message_generation</depend>
    <depend>message_runtime</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>  
    <depend>std_msgs</depend>
    <depend>image_transport</depend>
    <depend>cv_bridge</depend>  
    <depend>tf2</depend>

</package>

